# solana-mafia

./: .env  .env.example  .env.prod  .env.prod.example  .gitignore  .rsyncignore  APP_TODO.md  Anchor.toml  BUILD_OPTIMIZED.md  CLAUDE.md  CLI_README.md  Cargo.toml  NFT_SETUP.md  PLANS.md  SITE_CONFIG.md  check-env.sh  check-idl-fixed.js  check-idl-structure.js  debug-player-account.js  debug-player-data.js  debug-sell-transaction.js  devnet-test.json  doc.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logs.txt  manual-test.sh  monitor_realtime.sh  nginx.conf  nginx.prod.conf  nginx.system.conf  p  package-lock.json  package.json  panel.sh  reset-player.js  setup-ssh-key.sh  sm  solana-mafia-cli.sh  (+8 more)
.continue/docs/: new-doc.yaml
.continue/prompts/: new-prompt-1.yaml  new-prompt-2.yaml  new-prompt.yaml
.continue/rules/: new-rule-1.md  new-rule.md
app/: TODO.md  solana_mafia.json
app/backend/: .env.example  .gitignore  Dockerfile  README.md  create_tables.py  docker-compose.yml  migration.sql  pyproject.toml  requirements.txt  test_simple.py
app/frontend/: .npmrc  Dockerfile  Dockerfile.prod  jsconfig.json  next.config.ts  package-lock.json  package-minimal.json  package.json  tailwind.config.ts
metadata/nft/: cigars_corner_stand.json  (+24 more)
programs/solana-mafia/: Cargo.toml
programs/solana-mafia/src/: constants.rs  error.rs  lib.rs
programs/solana-mafia/src/instructions/: add_referral_bonus.rs  admin.rs  business.rs  claim_earnings.rs  create_business.rs  create_player.rs  earnings.rs  initialize.rs  mod.rs  nft.rs  pay_referral_bonus.rs  player.rs  process_referral_bonus.rs  sell_business.rs  set_referrer.rs  slots.rs  update_earnings.rs  upgrade_business.rs
programs/solana-mafia/src/state/: business.rs  business_nft.rs  game_config.rs  game_state.rs  mod.rs  player.rs  player_original.rs.backup  treasury.rs
programs/solana-mafia/src/utils/: calculations.rs  mod.rs  validation.rs
scripts/: analyze-dependencies.sh  analyze-program-size.sh  generate-metadata.js  generate-placeholder-images.js  generate_nft_images.py  initialize-game-simple.js  initialize-game.ts  optimize-program.sh  requirements-image-gen.txt  test-functions.js  update-metadata-urls.js  upload-to-ipfs.js
tests/: devnet-real-test.js  economics-tests.js  nft-comprehensive-test.js  nft-only.js  nft-test.js  quick-economics-test.js  security-tests.js  simple-test.js  solana-mafia.js  solana-mafia.ts
(+258 files in other folders)
