[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "z"          # Optimize for size (not speed)
lto = "fat"              # Aggressive link-time optimization  
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Remove panic unwinding code
strip = "symbols"        # Strip debug symbols
overflow-checks = false  # Disable overflow checks for smaller binary

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1

