[package]
name = "solana_mafia"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_mafia"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
serde = { version = "1.0", features = ["derive"] }

# Pin solana-program version to resolve conflicts
[patch.crates-io]
solana-program = { version = "=2.1.0" }
