[package]
name = "solana_mafia"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_mafia"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
init-if-needed = ["anchor-lang/init-if-needed"]
serde = ["dep:serde"]


[dependencies]
anchor-lang = { version = "0.31.1", default-features = false, features = ["init-if-needed"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

